//
//  Strings.swift
//  Headlines
//
//  Created by Pranav Kasetti on 31/08/2021.
//

import Foundation

enum Strings {
  static let appTitle = "Welcome to Headlines 🗞"
  static let onBoardingMessage = """
                    Swipe ⬅️ for the next article.
                    Swipe ➡️ for the previous article.
                    Favorite articles with the ⭐️ icon.
                    View your Favourites with the Favourites button.
                    """
  static let errorAlertTitle = "An error occurred"
  static let errorAlertMessage = "Please try again later."
  static let alertOk = "Ok"
  static let favourites = "Favourites"
  static let favouritesScreenTitle = "Favourite Articles"
  static let buttonDismiss = "Dismiss"
  static let empty = ""
}
