//
//  Constants.swift
//  Headlines
//
// Created by Pranav Kasetti on 28/08/2021.
//

import Foundation

enum Constants {
  // Even though usually I wouldn't include sensitive authentication
  // details, we need the API Key to run the app and the tests.
  static let APIKey = "d8bf8a4a-af1d-4dc9-b4fb-933ffc386c56"

  static let articleImageId = "articleImage"
  static let articleBodyId = "articleBody"
  static let articleStarIconId = "articleStarIcon"
  static let articleStarIconName = "star"
  static let articleStarFillIconId = "articleStarFillIcon"
  static let articleStarFillIconName = "star.fill"
}
